--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,98 @@
+*{
+  box-sizing: border-box;
+}
 
+
+img{
+  max-width: 100%;
+}
+
+.images{
+  display: flex;
+  gap: 0.5em;
+}
+
+.button{
+  cursor: pointer;
+  color: white;
+  border: none;
+  border-radius: 0.5rem;
+  background: darkblue;
+  font-size: 1.25rem;
+  padding: 0.5rem;
+  display: inline-block;
+  position: relative;
+}
+
+.button:hover{
+  background-color: rgb(255, 243, 166);
+  color: black;
+}
+
+.title{
+  color: rgb(255, 243, 166);
+  text-transform: uppercase;
+  margin: 0;
+  line-height: 1;
+  font-size: clamp(3rem, 10vw, 7rem);
+  text-align: center;
+}
+
+body{
+  margin: 1rem;
+  line-height: 1.5;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+header{
+  background-image: url(img/royal-blue.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/royal-blue.jpg");
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  margin: 2em 0;
+}
+
+.nav{
+  flex-grow: 1;
+  display: flex;
+  justify-content: space-around;
+}
+
+.nav a{
+  text-transform: capitalize;
+  text-decoration: none;
+}
+
+footer{
+  margin-top: 2em;
+}
+
+.footer-links{
+  opacity: 0.5;
+
+}
+
+@media only screen and (min-width: 800px){
+  .main-grid{
+    display: grid;
+    grid-template-columns: 
+    minmax(1em, 1fr)
+    repeat(3, minmax(10rem, 30rem))
+    minmax(1em, 1fr);
+    gap: 2em;
+  }
+
+  header{
+    grid-column: 2/5;
+  }
+
+  main{
+    grid-column: 2/-1;
+    display: grid;
+  }
+
+  footer{
+    grid-column: 2/3;
+  }
+}
